--- a/stick.css
+++ b/stick.css
@@ -31,6 +31,7 @@
     width: 14px;
     border: 2px solid green;
     background: greenyellow;
+    border-radius: 100%;
     top: -2px;
     z-index: 1;
 }
@@ -40,6 +41,7 @@
     width: 14px;
     border: 2px solid green;
     background: greenyellow;
+    border-radius: 100%;
     top: -2px;
     z-index: 0;
 }
