сзменил тестовую страницу

--- a/stick.css
+++ b/stick.css
@@ -50,7 +50,7 @@
 .stick_main_div > .outValue{
     position: relative;
     display: inline;
-    left: 215px;
+    left: 105%;
 }
 .stick_main_div > .vagon{
     position: relative;
